made it so that indents with can line up with one point and one character

--- a/docs/Editor.css
+++ b/docs/Editor.css
@@ -379,7 +379,7 @@
   }
 
   &.indentation {
-    width: 2em;
+    width: calc(var(--Handle--width) + 0.5em);
     justify-content: flex-end;
   }
 
