config option for log_initializations

--- a/docs/Editor.css
+++ b/docs/Editor.css
@@ -353,7 +353,7 @@
 }
 
 .Token {
-  animation: Token-appear 1s forwards linear;
+  /* animation: Token-appear 1s forwards linear; */
 }
 
 @keyframes Token-appear {
