--- a/docs/Console.css
+++ b/docs/Console.css
@@ -1,7 +1,14 @@
 .Console {
   flex: 0 0 25%;
-  width: calc(100% - 2em);
-  overflow: scroll;
+  /* width: calc(100% ); */
+  overflow-y: scroll;
 
-  padding: 1em;
+  box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.8);
+
+  display: flex;
+  flex-direction: column;
+
+  &>.item {
+    padding: 0.5em;
+  }
 }
